2008-05-26  Stephane Delcroix  <sdelcroix@novell.com>

	* TimeZoneInfo.cs: workaround for weird transition dates, like for 
	America/Phoenix. Fixes bnc #391093.

2008-05-26  Stephane Delcroix  <sdelcroix@novell.com>

	* TimeZoneInfo.cs: nullity check in HasSameRules (). Fixes bnc #391011

2008-04-13  Jb Evain  <jbevain@novell.com>

	* Func.cs: remove old ugly 2.1 hack.
	Merged from the Moonlight 2 branch.

2008-03-30  Jb Evain  <jbevain@novell.com>

	* TimeZoneInfo.cs: use generic collections instead of untyped
	collections.

2008-02-01  Jb Evain  <jbevain@novell.com>

	* Funcs.cs: gross hack for SL 1.1a.
	I hate myself, I hate myself.

2008-01-24  Stephane Delcroix  <sdelcroix@novell.com>

	* TimeZoneInfo.TransitionTime.cs: check for a whole number of
	milliseconds instead of a whole number of seconds.

2008-01-21  Sebastien Pouliot  <sebastien@ximian.com>

	* TimeZoneInfo.TransitionTime.cs: Avoid NRE on bad cast if null is
	provided to Equals(object). Found with Gendarme.

2008-01-08  Stephane Delcroix  <sdelcroix@novell.com>

	* TimeZoneInfo.TransitionTime.cs: fully qualify System.DayOfWeek in 
	casting operation.

2007-12-20  Stephane Delcroix  <sdelcroix@novell.com>

	* TimeZoneInfo.cs: adapting length check to parse TZif2 files
	introduced by glibc 2.6.x.